learning: Bootstrap and Jquery

--- a/BootstrapExample/Views/index.html
+++ b/BootstrapExample/Views/index.html
@@ -35,6 +35,10 @@
             </div>
         </div>
     </div>
+    <div class="cadre-info" data-number="1">Thông tin 1</div>
+    <div class="cadre-info" data-number="3">Thông tin 2</div>
+    <div class="cadre-info" data-number="5">Thông tin 3</div>
+    <input type="text" id="result">
     <script src="../assets/bootstrap/bootstrap.min.js"></script>
     <script src="../assets/jquery/jquery.min.js"></script>
     <script src="../wwwroot/js/index.js"></script>
